<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/A"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:id="@+id/tLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1,2">

            <TableRow
                android:id="@+id/tbRowStNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="26dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvStNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvStNumber"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etStNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@/stringinputStNumber"
                    android:inputType="number"
                    android:text="@string/etStNumber"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tbRowPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txPassword"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/inputPassword"
                    android:inputType="textPassword"
                    tools:text="@string/etPassword" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow android:id="@+id/tbRowButtton">

                <Space
                    android:layout_width="89dp"
                    android:layout_height="27dp" />

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btLogin" />

                <Button
                    android:id="@+id/btLogin2"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btLogin2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@color/colorAccent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@android:color/holo_blue_bright" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@android:color/holo_orange_light" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@android:color/holo_red_light" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>